@@ -1,0 +1,7 @@
+package org.eclipse.linuxtools.profiling.launch;
+
+import org.eclipse.debug.ui.AbstractLaunchConfigurationTab;
+
+public abstract class ProfileLaunchConfigurationTab extends AbstractLaunchConfigurationTab{
+
+}
